namespace HeadFirst.DesignPatterns.Factory
{
    public enum PizzaType
    {
        Cheese,
        Pepperoni,
        Clam,
        Veggie
    }
}